fixed overflow issue for testing

--- a/styles/scss/_portfolio.scss
+++ b/styles/scss/_portfolio.scss
@@ -3,7 +3,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
+    overflow: hidden;
 }
 
 .gridContainer {
