--- a/styles/styles.css
+++ b/styles/styles.css
@@ -657,6 +657,7 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
 
 .gridContainer {
